updated favicon size 512 and manifest.json

--- a/react-app/public/manifest.json
+++ b/react-app/public/manifest.json
@@ -11,6 +11,11 @@
       "src": "salty-192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "salty-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
